--- a/.github/workflow-mysql.yml
+++ b/.github/workflow-mysql.yml
@@ -7,7 +7,30 @@ on:
     - 'develop/**'
   
 jobs:
-  Docker-Image-Build:
+
+    Docker-Image-Build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: wanassanan/itb-kk-backend:latest
+
+    SSH-Remote-Deploy-backend:
     runs-on: ubuntu-latest
     # if: ${{contains(github.event.head_commit.message, 'Deploy DB')}} 
     steps: 
