--- a/.github/workflows/auto-redeploy-dev.yml
+++ b/.github/workflows/auto-redeploy-dev.yml
@@ -4,6 +4,7 @@ on:
   workflow_dispatch:
   push:
     branches:
+    - 'main'
     - 'develop/**'
   
 jobs:
@@ -29,4 +30,4 @@ jobs:
           push: true
           tags: wanassanan/itb-kk-database:development
       - name: Trigger redeploy
-        run: 'curl -H "Authorization: Bearer ${{ secrets.WATCHTOWER_TOKEN }}" https://20.243.133.115/watchtower/v1/update'
+        run: 'curl -H "Authorization: Bearer ${{ secrets.WATCHTOWER_TOKEN }}" http://20.243.133.115/watchtower/v1/update'
